--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ yanis/__pycache__/quickSort.cpython-311.pyc
 yanis/__pycache__/dc3.cpython-311.pyc
 __pycache__/quickSort.cpython-311.pyc
 y_dc3.py
+__pycache__/tools.cpython-311.pyc
