--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ yanis/__pycache__/dc3.cpython-311.pyc
 __pycache__/quickSort.cpython-311.pyc
 y_dc3.py
 __pycache__/tools.cpython-311.pyc
+SEQUENCES/
+genome_mapper.pdf
