Initial commit for edit_reads Add cut_read_to_kmer in tools.py

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ yanis/__pycache__/dc3.cpython-311.pyc
 __pycache__/quickSort.cpython-311.pyc
 y_dc3.py
 __pycache__/tools.cpython-311.pyc
+SEQUENCES/
