--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
-__pycache__/dc3.cpython-311.pyc
-__pycache__/radixsort.cpython-311.pyc
-__pycache__/y_dc3.cpython-311.pyc
-yanis/__pycache__/quickSort.cpython-311.pyc
-yanis/__pycache__/dc3.cpython-311.pyc
-__pycache__/quickSort.cpython-311.pyc
-y_dc3.py
-__pycache__/tools.cpython-311.pyc
 SEQUENCES
+*.pyc
